--- a/index.html
+++ b/index.html
@@ -6,12 +6,36 @@
 
     <title>OSS 117, les mini-jeux</title>
 
-    <!-- Styles -->
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Niramit" rel="stylesheet">
 
+    <!-- Styles -->
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/index-style.css">
 </head>
 <body>
 
-<!-- Scripts -->
+    <header class="flex-box head">
+        <div class="logo-box h-100">
+            <a href="#">
+                <img class="mw-100 mh-100 logo-img" src="img/logo.png" alt="">
+            </a>
+        </div>
 
+        <nav class="flex-box menu">
+            <button id="btn-menu" class="btn-menu" type="button">MENU</button>
+            <div class="nav-box">
+                <ul class="simple-list">
+                    <li class="menu-item"><a href="#">Réplicatrou</a></li>
+                    <li class="menu-item"><a href="#">Une question une réponse</a></li>
+                    <li class="menu-item"><a href="#">Une image un nom</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+<!-- Scripts -->
+<script type="text/javascript" src="js/menu.js"></script>
 </body>
 </html>
