--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Niramit" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/index-style.css">
+    <link rel="stylesheet" href="css/foot.css">
 </head>
 <body>
 
     <header class="flex-box head">
         <div class="logo-box h-100">
-            <a href="#">
+            <a href="index.html">
                 <img class="mw-100 mh-100 logo-img" src="img/logo.png" alt="">
             </a>
         </div>
@@ -27,13 +30,51 @@
             <button id="btn-menu" class="btn-menu" type="button">MENU</button>
             <div class="nav-box">
                 <ul class="simple-list">
-                    <li class="menu-item"><a href="#">Réplicatrou</a></li>
-                    <li class="menu-item"><a href="#">Une question une réponse</a></li>
-                    <li class="menu-item"><a href="#">Une image un nom</a></li>
+                    <li class="menu-item"><a href="game-one.html">Réplicatrou</a></li>
+                    <li class="menu-item"><a href="game-two.html">Une question une réponse</a></li>
+                    <li class="menu-item"><a href="game-three.html">Une image un nom</a></li>
                 </ul>
             </div>
         </nav>
     </header>
+
+    <h1 class="page-title">OSS 117, les mini-jeux</h1>
+
+    <section class="flex-box page-content">
+        <article class="resultat-box">
+            <h2 class="game-title"><a href="game-one.html">Réplicatrou</a></h2>
+            <table>
+                <tr>
+                    <td>Meilleur score :</td>
+                    <td>2500</td>
+                </tr>
+            </table>
+        </article>
+
+        <article class="resultat-box">
+            <h2 class="game-title"><a href="game-two.html">Une question une réponse</a></h2>
+            <table>
+                <tr>
+                    <td>Meilleur score :</td>
+                    <td>2500</td>
+                </tr>
+            </table>
+        </article>
+
+        <article class="resultat-box">
+            <h2 class="game-title"><a href="game-three.html">Une image un nom</a></h2>
+            <table>
+                <tr>
+                    <td>Meilleur score :</td>
+                    <td>2500</td>
+                </tr>
+            </table>
+        </article>
+    </section>
+
+    <footer class="foot">
+        <p>Design: Brevet / Danjoux</p>
+    </footer>
 
 <!-- Scripts -->
 <script type="text/javascript" src="js/menu.js"></script>
