--- a/game-one.html
+++ b/game-one.html
@@ -9,9 +9,30 @@
     <!-- Styles -->
 
 </head>
+
 <body>
+    <article class="">
+        <div class="" >
+            <p>Score: <strong id='score'></strong> </p>
+        </div>
+        <div class="" >
+            <p id="reply"></p>
+        </div>
+        <div class="">
+            <input type="text" id="answer" placeholder="votre reponse">
+            <input type="submit" id='validate' value="Valider" >
+        </div>
 
-<!-- Scripts -->
 
-</body>
-</html>
+        </article>
+
+            <!-- Scripts -->
+            <script type="text/javascript" src="data/repliques.js">
+
+            </script>
+            <script type="text/javascript" src="js/game-one.js">
+
+
+            </script>
+        </body>
+        </html>
