--- a/game-one.html
+++ b/game-one.html
@@ -13,6 +13,9 @@
 <body>
     <article class="">
         <div class="" >
+            <p>Questions restantes: <strong id='questions'></strong> </p>
+        </div>
+        <div class="" >
             <p>Score: <strong id='score'></strong> </p>
         </div>
         <div class="" >
