fin jeu 2 + ajout cookie

--- a/game-two.html
+++ b/game-two.html
@@ -46,7 +46,7 @@
             <table>
                 <tr>
                     <td>Meilleur score :</td>
-                    <td>2500</td>
+                    <td id="best-score">2500</td>
                 </tr>
                 <tr>
                     <td>Score :</td>
@@ -70,6 +70,8 @@
 
 <!-- Scripts -->
 <script type="text/javascript" src="js/menu.js"></script>
+
+<script type="text/javascript" src="js/cookie.js"></script>
 
 <script type="text/javascript" src="data/qru.js"></script>
 <script type="text/javascript" src="js/game-two.js"></script>
