--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <table>
                 <tr>
                     <td>Meilleur score :</td>
-                    <td>2500</td>
+                    <td id="best-score-game-one">2500</td>
                 </tr>
             </table>
         </article>
@@ -56,7 +56,7 @@
             <table>
                 <tr>
                     <td>Meilleur score :</td>
-                    <td>2500</td>
+                    <td id="best-score-game-two">2500</td>
                 </tr>
             </table>
         </article>
@@ -66,7 +66,7 @@
             <table>
                 <tr>
                     <td>Meilleur score :</td>
-                    <td>2500</td>
+                    <td id="best-score-game-three">2500</td>
                 </tr>
             </table>
         </article>
@@ -78,5 +78,7 @@
 
 <!-- Scripts -->
 <script type="text/javascript" src="js/menu.js"></script>
+<script type="text/javascript" src="js/cookie.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
