--- a/game-three.html
+++ b/game-three.html
@@ -6,6 +6,28 @@
 
     <title>OSS 117, Une image un nom</title>
 
+    <article class="">
+        <div class="" >
+            <p>Questions restantes: <strong id='questions'></strong> </p>
+        </div>
+        <div class="" >
+            <p>Score: <strong id='score'></strong> </p>
+        </div>
+        <div class="" >
+
+        </div>
+        <div class="">
+
+        </div
+        </article>
+
+            <!-- Scripts -->
+            <script type="text/javascript" src="data/personnages.js">
+
+            </script>
+            <script type="text/javascript" src="js/game-two.js">
+
+
     <!-- Styles -->
 
 </head>
