--- a/game-three.html
+++ b/game-three.html
@@ -22,10 +22,10 @@
         </article>
 
             <!-- Scripts -->
-            <script type="text/javascript" src="data/personnages.js">
+            <script type="text/javascript" src="data/characters.js">
 
             </script>
-            <script type="text/javascript" src="js/game-two.js">
+            <script type="text/javascript" src="js/game-three.js">
 
 
     <!-- Styles -->
