game one and two

--- a/game-two.html
+++ b/game-two.html
@@ -14,7 +14,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/game-two.css">
+    <link rel="stylesheet" href="css/game.css">
     <link rel="stylesheet" href="css/foot.css">
 
 </head>
@@ -46,11 +46,11 @@
             <table>
                 <tr>
                     <td>Meilleur score :</td>
-                    <td id="best-score">2500</td>
+                    <td id="best-score">0</td>
                 </tr>
                 <tr>
                     <td>Score :</td>
-                    <td id="game-score">200</td>
+                    <td id="game-score">0</td>
                 </tr>
             </table>
         </aside>
@@ -58,7 +58,7 @@
         <article class="game-box">
             <p id="game-question" class="game-question"></p>
 
-            <div id="answer-box" class="answer-box">
+            <div id="answer-box-two" class="answer-box-two">
 
             </div>
         </article>
