--- a/game-one.html
+++ b/game-one.html
@@ -6,36 +6,80 @@
 
     <title>OSS 117, Réplicatrou</title>
 
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Niramit" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+
     <!-- Styles -->
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/game.css">
+    <link rel="stylesheet" href="css/foot.css">
 
 </head>
 
 <body>
-    <article class="">
-        <div class="" >
-            <p>Questions restantes: <strong id='questions'></strong> </p>
-        </div>
-        <div class="" >
-            <p>Score: <strong id='score'></strong> </p>
-        </div>
-        <div class="" >
-            <p id="reply"></p>
-        </div>
-        <div class="">
-            <input type="text" id="answer" placeholder="votre reponse">
-            <input type="submit" id='validate' value="Valider" >
+    <header class="flex-box head">
+        <div class="logo-box h-100">
+            <a href="index.html">
+                <img class="mw-100 mh-100 logo-img" src="img/logo.png" alt="">
+            </a>
         </div>
 
+        <nav class="flex-box menu">
+            <button id="btn-menu" class="btn-menu" type="button">MENU</button>
+            <div class="nav-box">
+                <ul class="simple-list">
+                    <li class="menu-item"><a href="game-one.html">Réplicatrou</a></li>
+                    <li class="menu-item"><a href="game-two.html">Une question une réponse</a></li>
+                    <li class="menu-item"><a href="game-three.html">Une image un nom</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
+    <h1 class="page-title">Réplicatrou</h1>
+
+    <section class="game-content">
+        <aside class="score-box">
+            <table>
+                <tr>
+                    <td>Meilleur score :</td>
+                    <td id="best-score">2500</td>
+                </tr>
+                <tr>
+                    <td>Score :</td>
+                    <td id="game-score">200</td>
+                </tr>
+            </table>
+        </aside>
+
+        <article class="game-box">
+            <p id="game-question" class="game-question"></p>
+
+
+            <div class="answer-box-one">
+                <p>Questions restantes : <strong id='questions'></strong></p>
+                <input type="text" id="answer" class="answer-input" placeholder="Votre réponse">
+                <input type="submit" id='validate' class="answer-validate" value="Valider" >
+            </div>
         </article>
 
-            <!-- Scripts -->
-            <script type="text/javascript" src="data/repliques.js">
+    </section>
 
-            </script>
-            <script type="text/javascript" src="js/game-one.js">
+    <footer class="foot">
+        <p>Design: Brevet / Danjoux</p>
+    </footer>
 
 
-            </script>
-        </body>
-        </html>
+
+<!-- Scripts -->
+<script type="text/javascript" src="js/menu.js"></script>
+
+<script type="text/javascript" src="js/cookie.js"></script>
+
+<script type="text/javascript" src="data/repliques.js"></script>
+<script type="text/javascript" src="js/game-one.js"></script>
+</body>
+</html>
