--- a/game-one.html
+++ b/game-one.html
@@ -46,11 +46,11 @@
             <table>
                 <tr>
                     <td>Meilleur score :</td>
-                    <td id="best-score">2500</td>
+                    <td id="best-score">0</td>
                 </tr>
                 <tr>
                     <td>Score :</td>
-                    <td id="game-score">200</td>
+                    <td id="game-score">0</td>
                 </tr>
             </table>
         </aside>
@@ -59,7 +59,7 @@
             <p id="game-question" class="game-question"></p>
 
 
-            <div class="answer-box-one">
+            <div id="answer-box-one" class="answer-box-one">
                 <p>Questions restantes : <strong id='questions'></strong></p>
                 <input type="text" id="answer" class="answer-input" placeholder="Votre réponse">
                 <input type="submit" id='validate' class="answer-validate" value="Valider" >
