--- a/game-three.html
+++ b/game-three.html
@@ -14,7 +14,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/game-two.css">
+    <link rel="stylesheet" href="css/game.css">
     <link rel="stylesheet" href="css/foot.css">
 
 </head>
@@ -58,7 +58,7 @@
         <article class="game-box">
             <p id="game-question" class="game-question"></p>
 
-            <div id="answer-box" class="answer-box">
+            <div id="answer-box-three" class="answer-box-three">
 
             </div>
         </article>
