--- a/game-one.html
+++ b/game-one.html
@@ -62,7 +62,7 @@
             <div id="answer-box-one" class="answer-box-one">
                 <p>Questions restantes : <strong id='questions'></strong></p>
                 <input type="text" id="answer" class="answer-input" placeholder="Votre réponse">
-                <input type="submit" id='validate' class="answer-validate" value="Valider" >
+                <input type="submit" id='validate' class="answer-validate" value="Valider" ><br>
             </div>
         </article>
 
