--- a/game-three.html
+++ b/game-three.html
@@ -65,7 +65,7 @@
     </section>
 
     <footer class="foot">
-        <p>Design: Brevet / Danjoux</p>
+        <p>Conception & Design: Mael Brevet / Mickaël Danjoux</p>
     </footer>
 
 <!-- Scripts -->
