--- a/game-one.html
+++ b/game-one.html
@@ -69,7 +69,7 @@
     </section>
 
     <footer class="foot">
-        <p>Design: Brevet / Danjoux</p>
+        <p>Conception & Design: Mael Brevet / Mickaël Danjoux</p>
     </footer>
 
 
